service.yaml
apiVersion: v1
kind: Service

metadata:
  name: travel-buddy-service
  labels:
    app: travel-buddy

spec:
  type: ClusterIP

  selector:
    app: travel-buddy

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
