ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travelbuddy-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: travel-buddy-service
            port:
              number: 80
