travel-buddy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: travel-buddy-ingress

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:
  ingressClassName: alb

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: travel-buddy-service
            port:
              number: 80
